[Calibration] TOT distribution for different cluster sizes

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -88,6 +88,7 @@
 \newcommand{\inversecmcubic}{\ensuremath{\text{cm}^{-3}}\xspace}
 \newcommand{\inversecmsquared}{\ensuremath{\text{cm}^{-2}}\xspace}
 \newcommand{\voltpercm}{\ensuremath{\mathrm{V/cm}}\xspace}
+\newcommand{\mv}{\ensuremath{\mathrm{\,m\kern -0.1em V}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
