[ActiveEdge] writing of the comparison with data

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -89,6 +89,7 @@
 \newcommand{\inversecmsquared}{\ensuremath{\text{cm}^{-2}}\xspace}
 \newcommand{\voltpercm}{\ensuremath{\mathrm{V/cm}}\xspace}
 \newcommand{\mv}{\ensuremath{\mathrm{\,m\kern -0.1em V}}\xspace}
+\newcommand{\picocoulomb}{\ensuremath{\mathrm{\,p\kern -0.01em C}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
