--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -3,54 +3,70 @@
 \label{ch:ActiveEdgeSensors}
 %==============================================================================    
 
+
+Active-edge sensors allow for seamless tiling of pixel sensors of a
+vertex detector by depleting the sensors up to their physical
+edges. This allows for high coverage without creating overlaps between
+the pixel sensors and therefore reduces the material budget in the
+detector. This process consists of extending the backside
+implantation to the edge.
+
+In this chapter, the fabrication process for active edge sensors is
+studied. Planar sensors produced by Advacam~\cite{AdvacamRef} and bump
+bonded to Timepix3 ASICs are tested in test beams. The signal
+collection and the efficiency on the edge is presented. The test beam
+results are compared to TCAD simulations.
 %% --------------------------------------------- %%
 \section{Introduction}
 
-Thin n-in-p planar sensors produced by Advacam~\cite{AdvacamRef} are
-bump bonded to the Timepix3 readout chips ($55\,\micron$ pixel pitch)
-and studied in test beams and simulations.  Active-edge sensors allow
-for seamless tiling of pixel matrices in large areas of a vertex
-detector by depleting them to their physical edge. This allows for
-high coverage without creating overlaps between the pixel matrices and
-therefore reduces the material. Planar n-in-p pixelated sensors with
-active edge using a Deep Reactive Ion Etching (DRIE) process have been
-produced. This process consists of extending the backside implantation
-to the edge. Figure~\ref{fig:activeedge} illustrates a cross section
-of an active-edge sensor with and without guard ring. Since the
-back-side voltage is extended to the edge of the sensor, the gradient
-of potential between the edge and the last pixel can be very high and
-could lead to a breakdown of the sensor. A guard ring consists of an
-n-implant with a metallic contact on top of it surrounding the pixel
-matrix close to the edge and thereby smoothening the potential
-transition between the edge and the neighbouring pixels. The potential
-of the guard ring can be floating or grounded by connecting it to the
-ground of the readout ASIC. Timepix3 ASICs provide an extra row of
-bumped pixels allowing to connect the guard ring to ground.
+Active-edge sensors allow for seamless tiling of pixel sensor matrices
+in large areas of a vertex detector by depleting them to their
+physical edges. This allows for high coverage without creating
+overlaps between the pixel sensors and therefore reduces the
+material. Thin n-in-p planar sensors with active edges using a Deep
+Reactive Ion Etching (DRIE) process have been produced by
+Advacam~\cite{AdvacamRef}. They are bump bonded to the Timepix3
+readout chips ($55\,\micron$ pixel pitch) and studied in test beams
+and simulations. The DRIE process consists of extending the back-side
+implantation, as well as the bias voltage, to the edge of the
+sensor. The gradient of potential between the edge and the last pixel
+can be very high and could lead to a breakdown of the sensor. A guard
+ring consists of an n-implant with a metallic contact on top of it
+surrounding the pixel matrix close to the edge and thereby smoothening
+the potential transition between the edge and the neighbouring
+pixels. The guard ring can be kept floating or grounded by connecting
+it to the ground of the readout ASIC. Timepix3 ASICs provide an extra
+row of bumped pixels allowing to connect the guard ring to ground
+potential. Figure~\ref{fig:activeedge} illustrates a cross section of
+an active-edge sensor with and without guard ring.
 
 
 \begin{figure}[htbp]
-  \begin{center}
+  \centering
+  \begin{subfigure}[b]{0.45\textwidth}
     \begin{tikzpicture}
+      % \node[anchor=south west,inner sep=0] (image) at (0,0){\includegraphics[width=\textwidth]{figures/ActiveEdge/schematic.png}};
       \node[anchor=south west,inner sep=0] (image) at
-      (0,0){\includegraphics[width=.6\textwidth]{figures/ActiveEdge/schematic.png}};
+      (0,0){\includegraphics[width=\textwidth]{figures/ActiveEdge/Efield_20_NGR.png}};
       \begin{scope}[x={(image.south east)},y={(image.north west)}]
         \draw[-, dashed, line width=.7pt, color=white](0.1, 0.05) -- (0.1, 0.92);
         \draw[-, dashed, line width=.7pt, color=white](0.54, 0.05) -- (0.54, 0.92);
-        \draw[<->, line width=.7pt, color=black](0.01, 0.97) -- (0.16, 0.97); % edge width
         
-        \node[above, color=black] at (0.05, 0.97) {edge (20 \micron)};
+        \draw[<->, line width=.7pt, color=black](0.01, 1) -- (0.16, 1); % edge width
+        \node[above, color=black] at (0.05, 1) {edge};
         
-        \draw[<->, line width=.4pt, color=black](0.17, 0.97) -- (0.47, 0.97); % n-implant
-        \node[above, color=black] at (0.33, 0.97) {n-implant (36 \micron)};
-        \node[above, color=white] at (0.3, 0.5) {p-substrate};
-        \draw[<->, line width=.4pt, color=black](0.54, 0.0) -- (0.98, 0.0); % pixel width
+        \draw[<->, thick, color=black](0.17, 1) -- (0.43, 1); % n-implant
+        \node[above, color=black] at (0.33, 1) {n-implant};
+
+        \node[above, color=white] at (0.3, 0.5) {\textbf{p-substrate}};
+        \draw[<->, thick, color=black](0.54, 0.0) -- (0.98, 0.0); % pixel width
         \node[below, color=black] at (0.75, 0.0) {pixel (55 \micron)};
         
         \draw[-, line width=3pt, color=violet](0.0, 0.05) -- (0.98, 0.05); % p+ backside contact
         \node[below, color=violet] at (0.15, 0.0) {p+ backside contact};
         \draw[-, line width=3pt, color=violet](0.0, 0.045) -- (0.0, 0.93); % p+ active-edge contact
         \node[left, color=violet, rotate=90] at (-0.05, 0.7) {p+ active edge};
-        \node[left, color=white, rotate=90] at (0.08, 0.7) {final pixel edge};
+        \node[left, color=white, rotate=90] at (0.08, 0.9) {\textbf{final pixel edge}};
 
         % \draw[help lines,xstep=.1,ystep=.1] (0, 0) grid (1,1);
         % \foreach \x in {0,1,...,9} { \node [anchor=north] at (\x/10,0) {0.\x}; }
@@ -58,13 +74,71 @@ bumped pixels allowing to connect the guard ring to ground.
 
       \end{scope}
     \end{tikzpicture}
-    \caption{Schematic showing the cross section of a sensor with
-      $20\,\micron$ active-edge technology. The pixel edges considered
-      in the analysis are indicated with dashed lines.}
-    \label{fig:activeedge}
-  \end{center}
+    \caption{}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.45\textwidth}
+    \begin{tikzpicture}
+      \node[anchor=south west,inner sep=0] (image) at
+      (0,0){\includegraphics[width=\textwidth]{figures/ActiveEdge/Efield_23_FGR.png}};
+      \begin{scope}[x={(image.south east)},y={(image.north west)}]
+        \draw[-, dashed, line width=.7pt, color=white](0.14, 0.05) -- (0.14, 0.92);
+        \draw[-, dashed, line width=.7pt, color=white](0.54, 0.05) -- (0.54, 0.92);
+        \draw[<->, line width=.7pt, color=black](0.01, 1) -- (0.16, 1); % edge width
+        
+        \node[above, color=black] at (0.1, 1) {edge};
+        \node[above, color=white] at (0.1, 0.75) {\textbf{GR}};
+
+        % \draw[<->, line width=.4pt, color=black](0.17, 0.97) -- (0.47, 0.97); % n-implant
+        % \node[above, color=black] at (0.35, 0.97) {\small{n-implant}};
+        \node[above, color=white] at (0.3, 0.5) {\small{p-substrate}};
+        \draw[<->, line width=.4pt, color=black](0.54, 0.0) -- (0.98, 0.0); % pixel width
+        \node[below, color=black] at (0.75, 0.0) {\small{pixel (55 \micron)}};
+        
+        \draw[-, line width=3pt, color=violet](0.01, 0.05) -- (0.99, 0.05); % p+ backside contact
+  %      \node[below, color=violet] at (0.15, 0.0) {\small{p+ backside contact}};
+        \draw[-, line width=3pt, color=violet](0.01, 0.045) -- (0.01, 0.95); % p+ active-edge contact
+%        \node[left, color=violet, rotate=90] at (-0.05, 0.7) {\small{p+ active edge}};
+
+        % \draw[help lines,xstep=.1,ystep=.1] (0, 0) grid (1,1);
+        % \foreach \x in {0,1,...,9} { \node [anchor=north] at (\x/10,0) {0.\x}; }
+        % \foreach \y in {0,1,...,9} { \node [anchor=east] at (0,\y/10) {0.\y}; }
+      \end{scope}
+    \end{tikzpicture}
+    \caption{}
+  \end{subfigure}
+  \caption{Schematic showing the cross section of a sensor with
+    active-edge technology. The pixel edges considered in the analysis
+    are indicated with dashed lines. The electric field distribution
+    is also illustrated. (a) does not contain any guard ring and (b)
+    contains a guard ring (GR) in the edge which consists of an
+    n-implant with a metallic contact on top of it.}
+  \label{fig:activeedge}
 \end{figure}
 
+\section{Active-edge assemblies}\label{sec:AEgeometry}
+
+The produced assemblies by Advacam and tested in test beams are listed
+in \cref{tab:activeEdgeAssembliesList}. The edge distance is defined
+by the distance between the last pixel implant and the physical sensor
+edge.
+
+For the $50\,\micron$ thick sensors, 4 edge configurations are
+studied: 
+\begin{itemize}
+\item 20-NGR does not contain any guard-ring in the edge with an edge
+  distance of $20\,\micron$.
+\item 23-FGR contains a guard ring with a floating potential. The
+  edge distance is $23\,\micron$.
+\item 28-GNDGR contains a guard ring connected to the ground potential
+  with an edge distance of $28\,\micron$.
+\item 55-GNDGR contains a guard ring connected to the ground potential
+  with an edge distance of $55\,\micron$.
+\end{itemize}
+
+For 55-GNDGR-100 ($100\,\micron$ thick sensor) and 55-GNDGR-150
+($150\,\micron$ thick sensor), the edge contains a guard ring
+connected to the ground potential with an edge distance of
+$55\,\micron$.
 
 \begin{table}[htbp]
   \centering
@@ -75,16 +149,101 @@ bumped pixels allowing to connect the guard ring to ground.
     Assembly & Thickness [\micron] & Edge distance [\micron] & ID \\
     \midrule
     20-NGR  & 50 & 20 & W19\_G7 \\
-    23-FGR & 50 & 23 & W19\_F7 \\ \hline
+    23-FGR & 50 & 23 & W19\_F7 \\
     28-GNDGR & 50 & 28 & W19\_L8 \\
-    55-GNDGR & 50 & 55 &W19\_C7 \\
+    55-GNDGR & 50 & 55 &W19\_C7 \\ \hline
     55-GNDGR-100 & 100 & 55 & W5\_E2  \\ \hline
     55-GNDGR-150 & 150 & 55 & W5\_F1 \\
     \bottomrule
   \end{tabular}
 \end{table}
 
-The IV measurement is shown in Figure~\ref{fig:IVmeasurements}.
+\cref{fig:Layout_guard_ring} shows the layout of the assemblies listed
+in \cref{tab:activeEdgeAssembliesList}.
+
+\begin{figure}[htbp]
+  \begin{subfigure}[t]{0.5\textwidth}
+    \centering
+    \begin{tikzpicture}
+      \node[anchor=south west,inner sep=0] at
+      (0,0){\includegraphics[width=0.8\textwidth]{figures/ActiveEdge/geometry_20NGR.png}};
+
+      \begin{scope}[x={(image.south east)},y={(image.north west)}]
+        \draw[blue, thick](0.56, 0.05)--(0.56, 0.65);
+        \draw[blue, thick, dashed](0.52, 0.05)--(0.52, 0.65);
+        \draw[blue, thick](0.25, 0.05)--(0.25, 0.65);
+
+        \draw[blue, thick](0.25, 0.05)--(0.56, 0.05);
+        \draw[blue, thick](0.25, 0.65)--(0.56, 0.65);
+
+        \node[below, color=blue] at (0.25, 0.055) {-0.055 mm};
+        \node[below, color=blue] at (0.52, 0.055) {0 mm};
+
+        \draw[<->, blue, thick](0.46, 0.51)--(0.56, 0.51);
+        \node[right, color=blue] at (0.55, 0.51) {Edge distance};
+
+      \end{scope}
+    \end{tikzpicture}
+    \caption{20-NGR}
+    \label{fig:Layout20_NGR}
+  \end{subfigure}~
+  \begin{subfigure}[t]{0.5\textwidth}
+    \centering
+    \begin{tikzpicture}
+      \node[anchor=south west,inner sep=0] at
+      (0,0){\includegraphics[width=0.8\textwidth]{figures/ActiveEdge/geometry_23FGR.png}};
+    \end{tikzpicture}
+    \caption{23-FGR}
+    \label{fig:Layout20_FGR}
+  \end{subfigure}
+  \begin{subfigure}[t]{0.5\textwidth}
+    \centering
+    \begin{tikzpicture}
+      \node[anchor=south west,inner sep=0] at
+      (0,0){\includegraphics[width=0.55\textwidth]{figures/ActiveEdge/geometry_28GNDGR.png}};
+    \end{tikzpicture}
+    \caption{28-GNDGR}
+    \label{fig:Layout20_GNDGR}
+  \end{subfigure}~
+  \begin{subfigure}[t]{0.5\textwidth}
+    \centering
+    \begin{tikzpicture}
+      \node[anchor=south west,inner sep=0] at
+      (0,0){\includegraphics[width=0.55\textwidth]{{figures/ActiveEdge/geometry_55GNDGR.png}}};
+    \end{tikzpicture}
+    \caption{55-GNDGR, 55-GNDGR-100, 55-GNDGR-150}
+    \label{fig:Layout50_GNDGR}
+  \end{subfigure}~
+  \caption{Sensor layouts for different guard-ring solutions for the
+    assemblies described in\cref{tab:activeEdgeAssembliesList}. (a)
+    shows the convention used in Figures~\ref{fig:20-NGR},
+    \ref{fig:20-FGR}, \ref{fig:20-GNDGR} and \ref{fig:50-GNDGR} to
+    express the efficiency and the charge distribution at the edge as
+    a function of the track position. The border of the last pixel
+    before the edge is indicated by a dashed line (at position 0 mm)
+    and the physical sensor edge with a continuous line. The edge
+    distance is defined by the distance between the last pixel implant
+    and the physical sensor edge.}
+  \label{fig:Layout_guard_ring}
+\end{figure}
+
+
+
+
+
+
+
+
+
+
+
+
+Figure~\ref{fig:IVmeasurements} shows the measured leakage current in
+the different assemblies as a function of the bias voltage. The
+breakdown occurs earlier for the assembly without guard ring (20-NGR)
+compared to the other assemblies. For the nominal operation at -15~V,
+none of the assemblies are operated beyond the breakdown voltage.
+
 
 \begin{figure}[htbp]
   \centering
@@ -93,7 +252,7 @@ The IV measurement is shown in Figure~\ref{fig:IVmeasurements}.
   \label{fig:IVmeasurements}
 \end{figure}
 
-\subsection{Sensor geometries}
+
 The layers in the geometry description are defined in
 Figure~\ref{fig:PixelLayout} and explained in
 Table~\ref{tab:PixelStackDimensions}.
@@ -182,30 +341,11 @@ differente from above.
 \end{tabular}
 
 
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.33\textwidth}
-    \centering
-    \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/20umEdge_float_GR_withText.png}}
-    \caption{20~\micron edge: Floating guard ring}
-    \label{fig:GuardRingLayout_20_float_GR}
-  \end{subfigure}\hfill
-  \centering
-  \begin{subfigure}[b]{0.33\textwidth}
-    \centering
-    \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/20umEdge_GND_GR_withText.png}}
-    \caption{20~\micron edge: GND guard ring}
-    \label{fig:GuardRingLayout_20_GND_GR}
-  \end{subfigure}\hfill
-  \centering
-  \begin{subfigure}[b]{0.33\textwidth}
-    \centering
-    \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/50umEdge_GND_GR_withText.png}}
-    \caption{50~\micron edge: GND guard ring}
-    \label{fig:GuardRingLayout_50_GND_GR}
-  \end{subfigure}
-  \label{fig:GuardRingLayout}
-\end{figure}
+
+
+
+
+
 
 \subsection{Test-beam analysis of the edge}
 \begin{figure}[htbp]
@@ -666,4 +806,32 @@ sensor edge is shown in continuous line.
 %       \bottomrule
 %     \end{tabular}
 %   \end{minipage}
+% \end{figure}
+
+
+
+
+% \begin{figure}[htbp]
+%   \centering
+%   \begin{subfigure}[b]{0.33\textwidth}
+%     \centering
+%     \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/20umEdge_float_GR_withText.png}}
+%     \caption{20~\micron edge: Floating guard ring}
+%     \label{fig:GuardRingLayout_20_float_GR}
+%   \end{subfigure}\hfill
+%   \centering
+%   \begin{subfigure}[b]{0.33\textwidth}
+%     \centering
+%     \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/20umEdge_GND_GR_withText.png}}
+%     \caption{20~\micron edge: GND guard ring}
+%     \label{fig:GuardRingLayout_20_GND_GR}
+%   \end{subfigure}\hfill
+%   \centering
+%   \begin{subfigure}[b]{0.33\textwidth}
+%     \centering
+%     \fbox{\includegraphics[width=0.95\textwidth]{figures/ActiveEdge/50umEdge_GND_GR_withText.png}}
+%     \caption{50~\micron edge: GND guard ring}
+%     \label{fig:GuardRingLayout_50_GND_GR}
+%   \end{subfigure}
+%   \label{fig:GuardRingLayout}
 % \end{figure}
